# RTPaperCart

./: .gitignore  CopyStuffToPiAndCompileLoop.bat  Info.plist  MainWindow.xib  README.md  app_info_setup.bat
OSX/English.lproj/: MainMenu.xib
OSX/RTPaperCart.xcodeproj/: project.pbxproj
RTPaperCart.xcodeproj/: project.pbxproj
Resources-iPad/: MainWindow-iPad.xib
android/: AndroidManifest.xml  app_info_setup.bat  build.xml
android/jni/: Android.mk
android/res/values/: strings.xml
android/src/: Main.java
linux/: CMakeLists.txt  linux_compile.sh
media/: update_media.bat
script/: BuildSourcePackage.bat  MakeWindowsStandAloneZip.bat  ZipMac_RTAddHocVersion.bat
source/: App.cpp  App.h  ConsoleManager.cpp  ConsoleManager.h  Header.h  RomUtils.cpp  RomUtils.h
windows_vs2017/: RTPaperCart.sln  RTPaperCart.vcxproj  RTPaperCart.vcxproj.filters
